# ferrolearn

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-ml-design.md
.crosslink/: hook-config.json
.design/: fix-benchmark-regressions.md
ferrolearn/: Cargo.toml  README.md
ferrolearn-bayes/: Cargo.toml  README.md
ferrolearn-bayes/src/: lib.rs
ferrolearn-bayes/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-bench/: README.md  sklearn_bench.py
ferrolearn-cluster/: Cargo.toml  README.md
ferrolearn-cluster/src/: kmeans.rs  lib.rs
ferrolearn-cluster/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-core/: Cargo.toml  README.md
ferrolearn-core/src/: backend.rs  backend_faer.rs  dataset.rs  error.rs  introspection.rs  lib.rs  pipeline.rs  traits.rs
ferrolearn-core/tests/: compile_fail_tests.rs
ferrolearn-core/tests/compile_fail/: predict_unfitted_classifier.rs  predict_unfitted_classifier.stderr  predict_unfitted_kmeans.rs  predict_unfitted_kmeans.stderr  predict_unfitted_linear.rs  predict_unfitted_linear.stderr  transform_unfitted_pca.rs  transform_unfitted_pca.stderr
ferrolearn-core/tests/ui/: predict_unfitted_linear.rs  predict_unfitted_linear.stderr  predict_unfitted_logistic.rs  predict_unfitted_logistic.stderr  transform_unfitted_scaler.rs  transform_unfitted_scaler.stderr
ferrolearn-datasets/: Cargo.toml  README.md
ferrolearn-datasets/src/: generators.rs  lib.rs
ferrolearn-decomp/: Cargo.toml  README.md
ferrolearn-decomp/src/: factor_analysis.rs  fast_ica.rs  incremental_pca.rs  isomap.rs  lib.rs  lle.rs  mds.rs  pca.rs  spectral_embedding.rs  truncated_svd.rs
ferrolearn-decomp/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-io/: Cargo.toml  README.md
ferrolearn-io/src/: lib.rs
ferrolearn-linear/: Cargo.toml  README.md
ferrolearn-linear/src/: lasso.rs  lib.rs  linalg.rs  linear_regression.rs  logistic_regression.rs  ridge.rs
ferrolearn-linear/src/optim/: lbfgs.rs  mod.rs
ferrolearn-linear/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-metrics/: Cargo.toml  README.md
ferrolearn-metrics/src/: classification.rs  clustering.rs  lib.rs  regression.rs
ferrolearn-metrics/tests/: proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-model-sel/: Cargo.toml  README.md
ferrolearn-model-sel/src/: calibration.rs  distributions.rs  grid_search.rs  lib.rs  param_grid.rs  random_search.rs  self_training.rs
ferrolearn-neighbors/: Cargo.toml  README.md
ferrolearn-neighbors/src/: balltree.rs  knn.rs  lib.rs
ferrolearn-neighbors/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn-preprocess/: Cargo.toml  README.md
ferrolearn-preprocess/src/: binarizer.rs  function_transformer.rs  label_encoder.rs  lib.rs  max_abs_scaler.rs  min_max_scaler.rs  normalizer.rs  one_hot_encoder.rs  ordinal_encoder.rs  polynomial_features.rs  power_transformer.rs  robust_scaler.rs  standard_scaler.rs
ferrolearn-preprocess/tests/: proptest_invariants.rs
ferrolearn-python/: Cargo.toml  README.md
ferrolearn-sparse/: Cargo.toml  README.md
ferrolearn-sparse/src/: csc.rs  csr.rs  lib.rs
ferrolearn-tree/: Cargo.toml  README.md
ferrolearn-tree/src/: lib.rs
ferrolearn-tree/tests/: oracle_tests.rs  proptest_invariants.rs  sklearn_equivalence.rs
ferrolearn/src/: lib.rs
fixtures/: README.md  adaboost_classifier.json  agglomerative_clustering.json  classification_metrics.json  dbscan.json  decision_tree_classifier.json  decision_tree_regressor.json  elastic_net.json  gaussian_nb.json  gradient_boosting_classifier.json  gradient_boosting_regressor.json  kfold.json  kmeans.json  kneighbors_classifier.json  kneighbors_regressor.json  lasso.json  linear_regression.json  logistic_regression.json  minmax_scaler.json  nmf.json  pca.json  random_forest_classifier.json  random_forest_regressor.json  regression_metrics.json  ridge.json  robust_scaler.json  standard_scaler.json
scripts/: generate_fixtures.py  generate_sklearn_fixtures.py
tests/fixtures/sklearn_reference/: adaboost_classifier.json  agglomerative_clustering.json  classification_metrics.json  clustering_metrics.json  dbscan.json  decision_tree_classifier.json  decision_tree_regressor.json  elastic_net.json  gaussian_nb.json  gradient_boosting_classifier.json  gradient_boosting_regressor.json  kmeans.json  kneighbors_classifier.json  kneighbors_regressor.json  lasso.json  linear_regression.json  linear_regression_single_feature.json  logistic_regression.json  nmf.json  pca.json  random_forest_classifier.json  random_forest_regressor.json  regression_metrics.json  ridge.json
