[workspace]
members = [
    "ferrolearn",
    "ferrolearn-core",
    "ferrolearn-linear",
    "ferrolearn-tree",
    "ferrolearn-neighbors",
    "ferrolearn-bayes",
    "ferrolearn-cluster",
    "ferrolearn-decomp",
    "ferrolearn-preprocess",
    "ferrolearn-metrics",
    "ferrolearn-model-sel",
    "ferrolearn-sparse",
    "ferrolearn-datasets",
    "ferrolearn-io",
    "ferrolearn-python",
    "ferrolearn-bench",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dollspace-gay/ferrolearn"

[workspace.dependencies]
ndarray = "0.17"
faer = "0.24"
sprs = "0.11"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
thiserror = "2.0"
approx = "0.5"
float-cmp = "0.10"
rand = "0.9"
trybuild = "1.0"
serde_json = "1.0"
rmp-serde = "1.3"
rand_xoshiro = "0.7"
rand_distr = "0.5"
crc32fast = "1.4"
flate2 = "1.0"

# Internal crates
ferrolearn-core = { path = "ferrolearn-core", version = "0.1.0" }
ferrolearn-linear = { path = "ferrolearn-linear", version = "0.1.0" }
ferrolearn-tree = { path = "ferrolearn-tree", version = "0.1.0" }
ferrolearn-neighbors = { path = "ferrolearn-neighbors", version = "0.1.0" }
ferrolearn-bayes = { path = "ferrolearn-bayes", version = "0.1.0" }
ferrolearn-cluster = { path = "ferrolearn-cluster", version = "0.1.0" }
ferrolearn-decomp = { path = "ferrolearn-decomp", version = "0.1.0" }
ferrolearn-preprocess = { path = "ferrolearn-preprocess", version = "0.1.0" }
ferrolearn-metrics = { path = "ferrolearn-metrics", version = "0.1.0" }
ferrolearn-model-sel = { path = "ferrolearn-model-sel", version = "0.1.0" }
ferrolearn-sparse = { path = "ferrolearn-sparse", version = "0.1.0" }
ferrolearn-datasets = { path = "ferrolearn-datasets", version = "0.1.0" }
ferrolearn-io = { path = "ferrolearn-io", version = "0.1.0" }
