[package]
name = "ferrolearn-bayes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Naive Bayes classifiers for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "naive-bayes", "classification", "gaussian", "multinomial"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
proptest = "1"
