[package]
name = "ferrolearn-cluster"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clustering algorithms for ferrolearn"

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rayon.workspace = true
rand.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
