[package]
name = "ferrolearn-cluster"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clustering algorithms for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "clustering", "kmeans", "dbscan", "unsupervised"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rayon.workspace = true
rand.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
proptest = "1"
