[package]
name = "ferrolearn-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits, error types, and pipeline for the ferrolearn ML framework"

[dependencies]
faer.workspace = true
ndarray.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
trybuild.workspace = true
ferrolearn-linear.workspace = true
ferrolearn-preprocess.workspace = true
ferrolearn-decomp.workspace = true
ferrolearn-cluster.workspace = true
