[package]
name = "ferrolearn-datasets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in datasets and synthetic data generators for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "datasets", "iris", "synthetic-data", "benchmarks"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
approx.workspace = true
