[package]
name = "ferrolearn-decomp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dimensionality reduction and decomposition for ferrolearn"

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
