[package]
name = "ferrolearn-decomp"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dimensionality reduction and decomposition for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "pca", "svd", "dim-reduction", "decomposition"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
proptest = "1"
