[package]
name = "ferrolearn-io"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serialization and I/O utilities for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "serialization", "messagepack", "model-persistence", "ferrolearn"]
categories = ["science", "encoding"]

[dependencies]
ferrolearn-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rmp-serde.workspace = true
crc32fast.workspace = true

[dev-dependencies]
approx.workspace = true
