[package]
name = "ferrolearn-linear"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linear models for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "linear-regression", "logistic-regression", "ridge", "lasso"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
faer.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
float-cmp.workspace = true
serde_json.workspace = true
proptest = "1"
