[package]
name = "ferrolearn-metrics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Classification and regression metrics for the ferrolearn ML framework"

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
float-cmp.workspace = true
serde_json.workspace = true
proptest = "1"
