[package]
name = "ferrolearn-metrics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Classification and regression metrics for the ferrolearn ML framework"

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
approx.workspace = true
float-cmp.workspace = true
serde_json.workspace = true
kani-verifier = "0.67"
proptest = "1"
