[package]
name = "ferrolearn-neighbors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nearest neighbor models for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "knn", "nearest-neighbors", "kdtree", "classification"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rayon.workspace = true

[dev-dependencies]
approx.workspace = true
rand.workspace = true
serde_json.workspace = true
proptest = "1"
