[package]
name = "ferrolearn-preprocess"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Preprocessing transformers for the ferrolearn ML framework"

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
float-cmp.workspace = true
serde_json.workspace = true
proptest = "1"
