[package]
name = "ferrolearn"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A scikit-learn equivalent for Rust — re-export crate"
readme = "README.md"
keywords = ["machine-learning", "scikit-learn", "ml", "ndarray", "statistics"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ferrolearn-linear.workspace = true
ferrolearn-tree.workspace = true
ferrolearn-neighbors.workspace = true
ferrolearn-bayes.workspace = true
ferrolearn-cluster.workspace = true
ferrolearn-decomp.workspace = true
ferrolearn-preprocess.workspace = true
ferrolearn-metrics.workspace = true
ferrolearn-model-sel.workspace = true
ferrolearn-sparse.workspace = true
ferrolearn-datasets.workspace = true
ferrolearn-io.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
serde.workspace = true
ndarray.workspace = true
